syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/itsscb/df/pb";

message EmailAddress {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "EmailAddress";
        };
    };
    uint64 id = 1;
    uint64 person_id = 2;
    string email = 3;
}