syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

import "person.proto";

option go_package = "github.com/itsscb/df/pb";

message GetPersonRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "GetPerson";
          description: "Get an Person by ID";
          required: [
            "id"
            ];
        };
        example: "{\"id\": \"1\" }";
    };
    int64 id = 1;
}

message GetPersonResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "GetPerson Response";
          description: "Returns the Person";
        };
    };
    Person person = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}